# jugs

./: .gitignore  README.md  requirements.txt
.github/workflows/: mirror-to-gitea.yml
contracts/examples/jug_lca_buildings/: README.md  emissions.request.json  emissions.response.201.json  emissions_upload.response.400.invalid_json.json  emissions_upload.response.422.validation.json
contracts/jsonschema/jug_lca_buildings/: emission_result.schema.json  emissions_response.schema.json  error_response.schema.json  lca_input_data.schema.json
contracts/openapi/: jug_lca_buildings.yaml
libs/city_gis_oo/: basic_functions.py
libs/city_gis_oo/docker/: Dockerfile
libs/citygisoo/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
libs/citygisoo/src/citygisoo/: scrub_layer_class.py
libs/jug_chassis/: pyproject.toml
libs/jug_chassis/jug_chassis/logging/: __init__.py  config.py  logging_config.json  logging_file_config.json  setup_logging.py
libs/jugs_chassis/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
libs/jugs_chassis/jug_chassis/logging/: __init__.py
libs/jugs_chassis/src/jugs_chassis/logging/: __init__.py  config.py  filters.py  formatters.py  logging_config.json  logging_file_stdout_config.json  setup_logging.py
services/jug_ee/: app.py  pyproject.toml
services/jug_ee/jug_ee/: lca_carbon_workflow.py
services/jug_ee/tests/: test_access_nrcan_catalogue.py  test_envelope_emission.py  test_input_geojson_content.py  test_lca_carbon_workflow.py  test_lca_end_of_life_carbon.py  test_machine.py  test_opening_emission.py
services/jug_gis/: pyproject.toml
services/jug_gis/city_gis_oo/: README.md  validate_households.py
services/jug_gis/mtl_gis_oo/: README.md  input_paths_and_layers.py
services/jug_gis_cities/: pyproject.toml
services/jug_gis_cities/le_petit_mtl_gis_oo/: handle_le_petit_mtl_wf.py  input_paths_and_layers.py
services/jug_gis_cities/mtl_gis_oo/: basic_functions.py  handle_mtl_ds_workflow.py
services/jug_gis_cities/src/jug_gis_cities/saint_claude_gisoo/: handle_saint_claude_wf.py  input_paths_and_layers.py
services/jug_gis_validation/: README.md  interactive_validation_wf.ipynb
services/jug_lca_buildings/: app.py  pyproject.toml
services/jug_sim/: pyproject.toml
services/validation_gis_oo/: itest_wf.ipynb  validation_gisoo_wf.py
(+55 files in other folders)
