[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jug-chassis"               # published/distribution name (hyphen OK)
version = "0.1.0"
description = "Shared chassis (logging, etc.) for JUGS services"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["jug_chassis*"]
