[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jugs-chassis"               
version = "0.1.0"
description = "Shared chassis (logging, etc.) for JUGS services"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["jugs_chassis*"]

[tool.setuptools.package-data]
jugs_chassis = ["logging/logging_config.json"]
